--- a/jsjs/usecase/board.html
+++ b/jsjs/usecase/board.html
@@ -24,107 +24,130 @@
     <h3>데이터허브 활용사례</h3>
     <p>공공데이터를 활용하여 개발된 국내외 다양한 사례와 가공데이터를 공유하는 공간입니다.</p>
     <hr>
-    <div class="input-group mb-3 justify-content-end">
-        <input type="text" class="form-control flex-grow-0 flex-shrink-0 w-25" placeholder="검색" aria-label="Username" aria-describedby="basic-addon1">
-        <button type="button" class="btn btn-primary"><i class="fas fa-search"></i></button>
+    <div class="row justify-content-end">
+        <div class="col-12 col-lg-3">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="검색" aria-label="Username"
+                       aria-describedby="basic-addon1">
+                <button type="button" class="btn btn-primary"><i class="fas fa-search"></i></button>
+            </div>
+        </div>
+
     </div>
     <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
-            <div class="card">
-                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
-                <div class="card-body">
+            <div class="card" style="height: 290px">
+                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1"
+                     class="card-img-top" alt="...">
+                <span class="badge bg-primary">교통</span>
+                <div class="card-body overflow-hidden">
                     <h5 class="card-title">무지막지 교통사고</h5>
-                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
+                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer justify-content-end d-flex">
                     <small class="text-muted">2021-03-31 14:00</small>
                 </div>
             </div>
         </div>
         <div class="col">
-            <div class="card">
-                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
-                <div class="card-body">
+            <div class="card" style="height: 290px">
+                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1"
+                     class="card-img-top" alt="...">
+                <span class="badge bg-primary">교통</span>
+                <div class="card-body overflow-hidden">
                     <h5 class="card-title">무지막지 교통사고</h5>
-                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
+                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer justify-content-end d-flex">
                     <small class="text-muted">2021-03-31 14:00</small>
                 </div>
             </div>
         </div>
         <div class="col">
-            <div class="card">
-                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
-                <div class="card-body">
+            <div class="card" style="height: 290px">
+                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1"
+                     class="card-img-top" alt="...">
+                <span class="badge bg-primary">교통</span>
+                <div class="card-body overflow-hidden">
                     <h5 class="card-title">무지막지 교통사고</h5>
-                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
+                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer justify-content-end d-flex">
                     <small class="text-muted">2021-03-31 14:00</small>
                 </div>
             </div>
         </div>
         <div class="col">
-            <div class="card">
-                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
-                <div class="card-body">
+            <div class="card" style="height: 290px">
+                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1"
+                     class="card-img-top" alt="...">
+                <span class="badge bg-primary">교통</span>
+                <div class="card-body overflow-hidden">
                     <h5 class="card-title">무지막지 교통사고</h5>
-                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
+                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer justify-content-end d-flex">
                     <small class="text-muted">2021-03-31 14:00</small>
                 </div>
             </div>
         </div>
         <div class="col">
-            <div class="card">
-                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
-                <div class="card-body">
+            <div class="card" style="height: 290px">
+                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1"
+                     class="card-img-top" alt="...">
+                <span class="badge bg-primary">교통</span>
+                <div class="card-body overflow-hidden">
                     <h5 class="card-title">무지막지 교통사고</h5>
-                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
+                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer justify-content-end d-flex">
                     <small class="text-muted">2021-03-31 14:00</small>
                 </div>
             </div>
         </div>
         <div class="col">
-            <div class="card">
-                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
-                <div class="card-body">
+            <div class="card" style="height: 290px">
+                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1"
+                     class="card-img-top" alt="...">
+                <span class="badge bg-primary">교통</span>
+                <div class="card-body overflow-hidden">
                     <h5 class="card-title">무지막지 교통사고</h5>
-                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
+                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer justify-content-end d-flex">
                     <small class="text-muted">2021-03-31 14:00</small>
                 </div>
             </div>
         </div>
         <div class="col">
-            <div class="card">
-                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
-                <div class="card-body">
+            <div class="card" style="height: 290px">
+                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1"
+                     class="card-img-top" alt="...">
+                <span class="badge bg-primary">교통</span>
+                <div class="card-body overflow-hidden">
                     <h5 class="card-title">무지막지 교통사고</h5>
-                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다모바일 앱입니다.</p>
+                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer justify-content-end d-flex">
                     <small class="text-muted">2021-03-31 14:00</small>
                 </div>
             </div>
         </div>
         <div class="col">
-            <div class="card">
-                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
-                <div class="card-body">
+            <div class="card" style="height: 290px">
+                <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1"
+                     class="card-img-top" alt="...">
+                <span class="badge bg-primary">교통</span>
+                <div class="card-body overflow-hidden">
                     <h5 class="card-title">무지막지 교통사고</h5>
-                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
+                    <p class="card-text">'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.'무지막지 교통사고'는 교통사고에 대한 정보를 제공하는 모바일 앱입니다.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer justify-content-end d-flex">
                     <small class="text-muted">2021-03-31 14:00</small>
                 </div>
             </div>
         </div>
+
     </div>
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center mt-3">
