--- a/jsjs/usecase/content.html
+++ b/jsjs/usecase/content.html
@@ -15,6 +15,11 @@
     <!--    font awesome-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <style>
+        img{
+            max-height: 450px;
+        }
+    </style>
 </head>
 <body>
 <!--헤더부분-->
