--- a/jsjs/usecase/board.html
+++ b/jsjs/usecase/board.html
@@ -34,7 +34,7 @@
         </div>
 
     </div>
-    <div class="row row-cols-1 row-cols-md-3 g-4 row-cols-lg-4 g-4">
+    <div class="row row-cols-1 row-cols-md-3 g-4 row-cols-lg-4">
         <div class="col">
             <div class="card" style="height: 290px">
                 <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1"
