--- a/jsjs/usecase/content.html
+++ b/jsjs/usecase/content.html
@@ -51,7 +51,7 @@
 
                 개발자 이메일: wonpaper@naver.com</p>
             <h3>기능 및 서비스화면</h3>
-            <p>도로교통공단의 오픈 api를 활용하여 최근 연도별, 지역별 교통사고 건수 및 관련 정보 를 제공합니다.</p>
+            <p>도로교통공단의 오픈 api를 활용하여 최근 연도별, 지역별 교통사고 건수 및 관련 정보를 제공합니다.</p>
 
             <div class="alert alert-secondary overflow-auto d-flex" role="alert">
                 <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=2" alt="">
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="justify-content-center d-flex mb-3">
-            <button type="button" class="btn btn-primary justify-content-center">목록으로</button>
+            <button type="button" class="btn btn-primary justify-content-center">목록</button>
         </div>
     </div>
 
