--- a/BU/Error.html
+++ b/BU/Error.html
@@ -70,6 +70,14 @@
                               placeholder="내용을 입력해주세요"></textarea>
                     </div>
                 </div>
+                 <div class="row mb-3">
+                    <div class="col-3">파일첨부</div>
+                    <div class="col-lg-9 col-sm-12">
+                       <form action="" method="post" enctype="multipart/form-data">
+                           <input type="file" class="form-control">
+                       </form>
+                    </div>
+                </div>
                 <div class="row">
                    <div class="d-flex justify-content-end">
                     <button type="button" class="btn btn-outline-secondary me-2">등록하기</button>
