--- a/BU/dataset/request/list.html
+++ b/BU/dataset/request/list.html
@@ -78,7 +78,7 @@
                         </tbody>
                     </table>
                     <div class="click_right">
-                        <a href="Data_Request.html" class="btn btn-secondary">요청하기</a>
+                        <a href="action.html" class="btn btn-secondary">요청하기</a>
                     </div>
                 </div>
             </div>
