로그인 수정

--- a/jsjs/user/login.html
+++ b/jsjs/user/login.html
@@ -15,17 +15,34 @@
     <!--    font awesome-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <style>
+        :root {
+            --white: #FFFFFF;
+            --blue: #8DB4D8;
+        }
+
+        .login_alert {
+            border: solid 1px black;
+        .
+        }
+
+        .login_btn {
+            background-color: var(--blue);
+            font-weight: bold;
+            color: white;
+        }
+    </style>
     <script>
         window.onload = () => {
             const btnLogin = document.getElementById('btn-login');
             const textUsername = document.getElementById('text-username');
-            const textDomain = document.getElementById('text-domain');
+            // const textDomain = document.getElementById('text-domain');
             const textPassword = document.getElementById('text-password');
             btnLogin.addEventListener('click', () => {
                 // 입력 폼 유효성 검사
                 const xhr = new XMLHttpRequest();
                 const data = {
-                    email: textUsername.value + '@' + textDomain.value,
+                    email: textUsername.value,
                     password: textPassword.value,
                 };
                 xhr.onload = function () {
@@ -51,31 +68,24 @@
 <div th:replace="fragments/header.html :: fragment-header"></div>
 <div class="container">
     <div class="row">
-        <div class="col-12 col-lg-6 mx-auto">
-            <div class="alert alert-secondary" role="alert">
-                <h2 class="text-center">로그인</h2>
-                <div class="d-grid gap-2 mb-3">
-                    <button class="btn btn-primary" type="button"><i class="fab fa-facebook-square me-2"></i>페이스북로그인
-                    </button>
+        <div class="col-12 col-lg-4 mx-auto">
+            <div class="alert login_alert" role="alert" style="background-color:var(--white);">
+                <h3 class="text-center"><i class="fas fa-sign-in-alt me-3"></i>로그인</h3>
+                <div class="input-group mb-3">
+                    <span class="input-group-text"><i class="far fa-envelope"></i></span>
+                    <input type="text" class="form-control" placeholder="이메일"
+                           aria-describedby="basic-addon1" id="text-username">
                 </div>
                 <div class="input-group mb-3">
-                    <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                    <input type="text" class="form-control" placeholder="Username" aria-label="Username"
-                           id="text-username">
-                    <span class="input-group-text">@</span>
-                    <input type="text" class="form-control" placeholder="Domain" aria-label="Domain" id="text-domain">
-                </div>
-                <div class="input-group mb-3">
-                    <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                    <input type="text" class="form-control" placeholder="비밀번호" aria-label="Password" id="text-password"
+                    <span class="input-group-text" id="text-password"><i class="fas fa-key"></i></span>
+                    <input type="password" class="form-control" placeholder="비밀번호"
                            aria-describedby="basic-addon1">
                 </div>
                 <div class="d-grid gap-2">
-                    <button type="button" class="btn btn-outline-success" id="btn-login">로그인</button>
-                    <button type="button" class="btn btn-outline-danger" onclick="location.href='index.html'">홈으로
-                    </button>
+                    <button type="button" class="btn login_btn" id="btn-login">ENTER</button>
                 </div>
             </div>
+
         </div>
     </div>
 </div>
