--- a/jsjs/header.html
+++ b/jsjs/header.html
@@ -33,7 +33,7 @@
         <div class="container-fluid">
             <div class="mt-2">
                 <a href="/">
-                    <div id="logo" style="width: 270px; height: 55px; cursor: pointer;">
+                    <div id="logo" style="width: 230px; height: 55px; cursor: pointer;">
                     </div>
                 </a>
             </div>
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent align-self-center">
                 <ul class="navbar-nav mb-2 mb-lg-0 ms-3">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle h4" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle h5 mb-0" href="#" id="navbarDropdown" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
                             API
                         </a>
@@ -56,9 +56,9 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle h4" href="#" id="navbarDropdown2" role="button"
+                        <a class="nav-link dropdown-toggle h5 mb-0" href="#" id="navbarDropdown2" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
-                          데이터셋
+                            데이터셋
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">데이터 목록 및 조회</a></li>
@@ -67,7 +67,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link h4" href="#">데이터허브</a>
+                        <a class="nav-link h5 mb-0" href="#">데이터허브</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-3 ms-lg-auto mb-lg-0">
@@ -113,7 +113,7 @@
             leon = new LeonSans({
                 text: 'DataPortal',
                 color: ['#000000'],
-                size: 53,
+                size: 42,
                 weight: 818,
 
 
