--- a/BU/DataHub.html
+++ b/BU/DataHub.html
@@ -61,6 +61,7 @@
         </div>
         <div class="row mx-auto">
             <div class="col-10 mx-auto">
+               <strong class="ms-3">인기 데이터 HUB</strong>
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active d-flex">
