--- a/BU/Error.html
+++ b/BU/Error.html
@@ -39,10 +39,12 @@
                 <span>
                     <h3 class="mb-5">오류 문의</h3>
                 </span>
-                
+                <div class="row mb-3">
+                <div class="col-3">분류</div>
+                </div>
                 <div class="row mb-3">
                     <div class="col-3">대분류</div>
-                    <div class="col-lg-9 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <select class="form-select" aria-label="Default select example">
                             <option selected>선택해주세요</option>
                             <option value="1">버그</option>
@@ -50,10 +52,8 @@
                             <option value="3">기타</option>
                         </select>
                     </div>
-                </div>
-                <div class="row mb-3">
                     <div class="col-3">소분류</div>
-                    <div class="col-lg-9 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <select class="form-select" aria-label="Default select example">
                             <option selected>선택해주세요</option>
                             <option value="1">API</option>
@@ -63,6 +63,7 @@
                         </select>
                     </div>
                 </div>
+                
                 <div class="row mb-3">
                     <div class="col-3">내용</div>
                     <div class="col-lg-9 col-sm-12">
