--- a/BU/User.html
+++ b/BU/User.html
@@ -39,15 +39,13 @@
                 <span>
                     <h3 class="mb-5">이용 문의</h3>
                 </span>
-                <div class="row mb-3">
-                    <div class="col-3">제목</div>
-                    <div class="col-lg-9 col-sm-12">
-                        <input type="text" class="form-control">
-                    </div>
+                
+               <div class="row mb-3">
+                <div class="col-3">분류</div>
                 </div>
                 <div class="row mb-3">
                     <div class="col-3">대분류</div>
-                    <div class="col-lg-9 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <select class="form-select" aria-label="Default select example">
                             <option selected>선택해주세요</option>
                             <option value="1">버그</option>
@@ -55,10 +53,8 @@
                             <option value="3">기타</option>
                         </select>
                     </div>
-                </div>
-                <div class="row mb-3">
                     <div class="col-3">소분류</div>
-                    <div class="col-lg-9 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <select class="form-select" aria-label="Default select example">
                             <option selected>선택해주세요</option>
                             <option value="1">API</option>
@@ -66,6 +62,12 @@
                             <option value="3">데이터 허브</option>
                             <option value="3">기타</option>
                         </select>
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col-3">제목</div>
+                    <div class="col-lg-9 col-sm-12">
+                        <input type="text" class="form-control">
                     </div>
                 </div>
                 <div class="row mb-3">
