--- a/BU/User.html
+++ b/BU/User.html
@@ -36,27 +36,25 @@
     <div class="container">
         <div class="row">
             <div class="col-10 mx-auto">
+               <div class="">
                 <span>
                     <h3 class="mb-5">이용 문의</h3>
                 </span>
-                
-               <div class="row mb-3">
+                <div class="row mb-3">
                 <div class="col-3">분류</div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-3">대분류</div>
-                    <div class="col-lg-3 col-sm-12">
+                    <div class="col-lg-2 col-sm-12">
                         <select class="form-select" aria-label="Default select example">
-                            <option selected>선택해주세요</option>
+                            <option selected>대분류</option>
                             <option value="1">버그</option>
                             <option value="2">이용문의</option>
                             <option value="3">기타</option>
                         </select>
                     </div>
-                    <div class="col-3">소분류</div>
-                    <div class="col-lg-3 col-sm-12">
+                    <div class="col-lg-2 col-sm-12">
                         <select class="form-select" aria-label="Default select example">
-                            <option selected>선택해주세요</option>
+                            <option selected>소분류</option>
                             <option value="1">API</option>
                             <option value="2">데이터</option>
                             <option value="3">데이터 허브</option>
@@ -65,24 +63,25 @@
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-3">제목</div>
                     <div class="col-lg-9 col-sm-12">
+                       <span>제목</span>
                         <input type="text" class="form-control">
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-3">내용</div>
                     <div class="col-lg-9 col-sm-12">
+                      <span>내용</span>
                        <textarea class="form-control" cols="" rows="5" style="resize: none;"
                               placeholder="내용을 입력해주세요"></textarea>
                     </div>
                 </div>
                 <div class="row">
-                   <div class="d-flex justify-content-end">
+                   <div class="col-lg-9 col-sm-12 d-flex justify-content-end">
                     <button type="button" class="btn btn-outline-secondary me-2">등록하기</button>
                     <button type="button" class="btn btn-outline-secondary">취소하기</button>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     </div>
