--- a/BU/Error.html
+++ b/BU/Error.html
@@ -43,19 +43,17 @@
                 <div class="col-3">분류</div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-3">대분류</div>
-                    <div class="col-lg-3 col-sm-12">
+                    <div class="col-lg-2 col-sm-12">
                         <select class="form-select" aria-label="Default select example">
-                            <option selected>선택해주세요</option>
+                            <option selected>대분류</option>
                             <option value="1">버그</option>
                             <option value="2">이용문의</option>
                             <option value="3">기타</option>
                         </select>
                     </div>
-                    <div class="col-3">소분류</div>
-                    <div class="col-lg-3 col-sm-12">
+                    <div class="col-lg-2 col-sm-12">
                         <select class="form-select" aria-label="Default select example">
-                            <option selected>선택해주세요</option>
+                            <option selected>소분류</option>
                             <option value="1">API</option>
                             <option value="2">데이터</option>
                             <option value="3">데이터 허브</option>
@@ -65,22 +63,22 @@
                 </div>
                 
                 <div class="row mb-3">
-                    <div class="col-3">내용</div>
                     <div class="col-lg-9 col-sm-12">
+                      <span>내용</span>
                        <textarea class="form-control" cols="" rows="5" style="resize: none;"
                               placeholder="내용을 입력해주세요"></textarea>
                     </div>
                 </div>
                  <div class="row mb-3">
-                    <div class="col-3">파일첨부</div>
-                    <div class="col-lg-9 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
+                      <span>파일첨부</span>
                        <form action="" method="post" enctype="multipart/form-data">
                            <input type="file" class="form-control">
                        </form>
                     </div>
                 </div>
                 <div class="row">
-                   <div class="d-flex justify-content-end">
+                   <div class="col-lg-9 col-sm-12 d-flex justify-content-end">
                     <button type="button" class="btn btn-outline-secondary me-2">등록하기</button>
                     <button type="button" class="btn btn-outline-secondary">취소하기</button>
                     </div>
